--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,68 +1,145 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <style>
     body {
-      width: 300px;
+      width: 320px;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      padding: 15px;
-      background-color: #f9f9f9;
+      padding: 0;
+      margin: 0;
+      background-color: #f8f9fa;
       color: #333;
     }
-    h2 {
-      margin-top: 0;
-      color: #2c3e50;
+
+    .header {
+      background-color: #2c3e50;
+      color: white;
+      padding: 16px;
+      text-align: center;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .header h1 {
+      margin: 0;
       font-size: 18px;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+    }
+
+    .content {
+      padding: 20px;
       text-align: center;
     }
-    button {
-      width: 100%;
+
+    .btn {
       background-color: #3498db;
       color: white;
       border: none;
-      padding: 10px;
-      cursor: pointer;
-      border-radius: 5px;
+      padding: 12px 24px;
+      border-radius: 6px;
       font-size: 16px;
-      transition: background-color 0.3s;
+      cursor: pointer;
+      width: 100%;
+      transition: background-color 0.2s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
     }
-    button:hover {
+
+    .btn:hover {
       background-color: #2980b9;
     }
+
+    .btn:disabled {
+      background-color: #bdc3c7;
+      cursor: not-allowed;
+    }
+
     #status {
-      margin-top: 15px;
+      margin-top: 16px;
       font-size: 14px;
-      text-align: center;
       min-height: 20px;
+      padding: 8px;
+      border-radius: 4px;
     }
+
     .success {
-      color: #27ae60;
+      background-color: #d4edda;
+      color: #155724;
+      border: 1px solid #c3e6cb;
     }
+
     .error {
-      color: #c0392b;
+      background-color: #f8d7da;
+      color: #721c24;
+      border: 1px solid #f5c6cb;
     }
-    .spinner {
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #3498db;
-      border-radius: 50%;
-      width: 20px;
-      height: 20px;
-      animation: spin 1s linear infinite;
-      margin: 0 auto;
+
+    .processing {
+      color: #004085;
+      background-color: #cce5ff;
+      border: 1px solid #b8daff;
+    }
+
+    .hidden {
       display: none;
     }
+
+    /* Spinner */
+    .spinner {
+      border: 3px solid #f3f3f3;
+      border-top: 3px solid #3498db;
+      border-radius: 50%;
+      width: 16px;
+      height: 16px;
+      animation: spin 1s linear infinite;
+    }
+
     @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
+      0% {
+        transform: rotate(0deg);
+      }
+
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    .footer {
+      font-size: 11px;
+      color: #7f8c8d;
+      margin-top: 20px;
+      text-align: center;
     }
   </style>
 </head>
-<body>
-  <h2>Resume AI Clipper</h2>
-  <button id="tailorBtn">Tailor & Generate</button>
-  <div id="status"></div>
-  <div class="spinner" id="spinner"></div>
 
+<body>
+  <div class="header">
+    <h1>📄 ResumeForge</h1>
+  </div>
+  <div class="content">
+    <p style="margin-bottom: 20px; color: #555; font-size: 14px;">
+      Clip the current job description to build your tailored resume.
+    </p>
+
+    <button id="tailorBtn" class="btn">
+      <span id="btnText">Clip Job to Queue</span>
+      <div id="spinner" class="spinner hidden"></div>
+    </button>
+
+    <div id="status" class="hidden"></div>
+
+    <div class="footer">
+      Powered by Resume AI & CloudConvert
+    </div>
+  </div>
   <script src="popup.js"></script>
 </body>
+
 </html>
